🌮🍓 Updated with Glitch

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <meta charset="utf-8">
 <title>Redirecting to Accountinfo</title>
-<link rel="canonical" href="https://amis-delta.github.io/amisdelta/site">
+<link rel="canonical" href="https://impartial-ellipse.glitch.me/accountinfo.html">
 <meta http-equiv="refresh" content="0; url=accountinfo.html">
 <h1>Redirecting to Accountinfo...</h1>
 <a href="accountinfo.html">Click here if you are not redirected.</a>
