👠🎹 Updated with Glitch

--- a/public/invoice.html
+++ b/public/invoice.html
@@ -43,7 +43,7 @@
             <div class="form">
                 <div class="input name" style="margin-top:2rem;">
                     <label>Name</label>
-                    <input type="text" placeholder="Water, Bread, etc.">
+                    <input type="text" placeholder="Water, Bread, Rice, Orange, etc.">
                     <div class="message_alert"></div>
                 </div>
                 <div class="input chain">
