🍲💼 Updated with Glitch

--- a/public/transfer.html
+++ b/public/transfer.html
@@ -786,6 +786,6 @@
             }
         }
       </script>
-      <script type="text/javascript" src="lib/ethereumjs.js"></script>
+      <script type="text/javascript" src="https://impartial-ellipse.glitch.me/lib/ethereumjs.js"></script>
 </body>
 </html>
