👌🐃 Updated with Glitch

--- a/public/index.html
+++ b/public/index.html
@@ -46,8 +46,8 @@ body {font-family: "Lato", sans-serif}
 
       
         <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px">
-          <div class="w3-container w3-white">
-            <img src="icon.png" width="50px">
+         
+            <img src="amis.png" width="50px">
           </div>
         </div>
     </div>
@@ -75,8 +75,8 @@ body {font-family: "Lato", sans-serif}
   <!--Taxi-->
   <div class="w3-grey" id="taxi">
     <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px">
-      <h2 class="w3-center">Taxi</h2>
-      <p class="w3-opacity"><a href="taxi.html" onFocus="if(this.blur)this.blur()">Take a ride</a></p>
+      <h2 class="w3-center">Taxi (Under Development) </h2>
+      <p class="w3-opacity"><a href="taxi.html" onFocus="if(this.blur)this.blur()">Try it out !Take a ride</a></p>
     </div>
   </div>
 
