--- a/public/taxi.html
+++ b/public/taxi.html
@@ -43,7 +43,7 @@ body {font-family: "Lato", sans-serif}
       <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
         <div class="w3-third w3-margin-bottom">
           <div class="w3-container w3-white">
-            <img src="images/icon.png" width="200px">
+            <img src="amis.png" width="200px">
           </div>
         </div>
         
